--- a/src/components/boolean-input-field/boolean-input-field.html
+++ b/src/components/boolean-input-field/boolean-input-field.html
@@ -22,4 +22,5 @@
 *
 *
 -->
-<radio-button-input [options]="options" [fieldId]="fieldId" [(selectedValue)]="inputFieldValue" (updateValueAction)="onUpdateValue($event)"></radio-button-input>
+<radio-button-input [lockingFieldStatus]="lockingFieldStatus" [options]="options" [fieldId]="fieldId"
+  [(selectedValue)]="inputFieldValue" (updateValueAction)="onUpdateValue($event)"></radio-button-input>
