--- a/src/components/date-input-field/date-input-field.html
+++ b/src/components/date-input-field/date-input-field.html
@@ -22,4 +22,5 @@
 *
 *
 -->
-<data-time-input [(inputValue)]="inputFieldValue" (dateTimeUpdateAction)="updateValue($event)" [mode]="mode"></data-time-input>
+<data-time-input [lockingFieldStatus]="lockingFieldStatus" [(inputValue)]="inputFieldValue"
+  (dateTimeUpdateAction)="updateValue($event)" [mode]="mode"></data-time-input>
