--- a/src/components/option-set-input-field/option-set-input-field.html
+++ b/src/components/option-set-input-field/option-set-input-field.html
@@ -22,14 +22,19 @@
 *
 *
 -->
-<div *ngIf="!(dataEntrySettings && dataEntrySettings.shouldDisplayAsRadio && (options && options.length <= maxOptionCountAsRadion))">
+<div
+  *ngIf="!(dataEntrySettings && dataEntrySettings.shouldDisplayAsRadio && (options && options.length <= maxOptionCountAsRadion))">
   <div (click)="openOptionListModal()" padding-left>
     <ion-item no-lines>
-      <span *ngIf="!(inputFieldValue && labelMapper && labelMapper[inputFieldValue]) || inputFieldValue ===''">Touch to select option</span>
-      <span *ngIf="(inputFieldValue && labelMapper && labelMapper[inputFieldValue])"> {{ labelMapper[inputFieldValue] }}</span>
+      <span *ngIf="!(inputFieldValue && labelMapper && labelMapper[inputFieldValue]) || inputFieldValue ===''">Touch to
+        select option</span>
+      <span *ngIf="(inputFieldValue && labelMapper && labelMapper[inputFieldValue])">
+        {{ labelMapper[inputFieldValue] }}</span>
     </ion-item>
   </div>
 </div>
-<div *ngIf="(dataEntrySettings && dataEntrySettings.shouldDisplayAsRadio && (options && options.length <= maxOptionCountAsRadion))">
-  <radio-button-input [options]="options" [fieldId]="fieldId" [(selectedValue)]="inputFieldValue" (updateValueAction)="updateValues($event)"></radio-button-input>
+<div
+  *ngIf="(dataEntrySettings && dataEntrySettings.shouldDisplayAsRadio && (options && options.length <= maxOptionCountAsRadion))">
+  <radio-button-input [lockingFieldStatus]="lockingFieldStatus" [options]="options" [fieldId]="fieldId"
+    [(selectedValue)]="inputFieldValue" (updateValueAction)="updateValues($event)"></radio-button-input>
 </div>
