--- a/src/components/coordinate-input/coordinate-input.html
+++ b/src/components/coordinate-input/coordinate-input.html
@@ -35,7 +35,8 @@
   </ion-col>
   <ion-col col-auto>
     <div float-right>
-      <button color="danger" outline ion-button [disabled]="(position.lat == '' && position.lng == '')" (tap)="clearValue()">
+      <button color="danger" outline ion-button
+        [disabled]="(position.lat == '' && position.lng == '') || lockingFieldStatus" (tap)="clearValue()">
         <ion-icon padding name="trash" color="danger"></ion-icon>
       </button>
       <div class="item-card" color="font-color" ion-button clear text-justify (click)="openMap()">
