--- a/src/components/organisation-unit-input/organisation-unit-input.html
+++ b/src/components/organisation-unit-input/organisation-unit-input.html
@@ -6,7 +6,8 @@
   </ion-col>
   <ion-col col-auto>
     <div float-right>
-      <button color="danger" padding outline ion-button [disabled]="seletectOrganisatioUnit.name == ''" (tap)="clearValue()">
+      <button color="danger" padding outline ion-button
+        [disabled]="seletectOrganisatioUnit.name == '' || lockingFieldStatus" (tap)="clearValue()">
         <ion-icon name="trash" color="danger"></ion-icon>
       </button>
       <div class="item-card" color="font-color" ion-button clear text-justify (click)="openOrganisationUnitSelection()">
