--- a/src/components/password-input/password-input.html
+++ b/src/components/password-input/password-input.html
@@ -26,13 +26,15 @@
   <ion-col>
     <div>
       <ion-item no-lines>
-        <ion-input type="password" placeholder="{{placeholder|translate}}" (ionBlur)="updateValues()" [(ngModel)]="inputFieldValue"></ion-input>
+        <ion-input [readonly]="lockingFieldStatus" type="password" placeholder="{{placeholder|translate}}"
+          (ionBlur)="updateValues()" [(ngModel)]="inputFieldValue"></ion-input>
       </ion-item>
     </div>
   </ion-col>
   <ion-col col-auto *ngIf="showBarcodeScanner">
     <div float-right>
-      <barcode-input [barcodeSettings]="barcodeSettings" (barcodeReaderChange)="onChangeBarcodeReader($event)"></barcode-input>
+      <barcode-input [lockingFieldStatus]="lockingFieldStatus" [barcodeSettings]="barcodeSettings"
+        (barcodeReaderChange)="onChangeBarcodeReader($event)"></barcode-input>
     </div>
   </ion-col>
 </ion-row>
