--- a/src/components/phone-number-input/phone-number-input.html
+++ b/src/components/phone-number-input/phone-number-input.html
@@ -26,7 +26,8 @@
   <ion-row>
     <ion-col>
       <ion-item no-lines>
-        <ion-input (ionBlur)="updateValue()" [(ngModel)]="inputFieldValue" type="tel"></ion-input>
+        <ion-input [readonly]="lockingFieldStatus" (ionBlur)="updateValue()" [(ngModel)]="inputFieldValue" type="tel">
+        </ion-input>
       </ion-item>
     </ion-col>
   </ion-row>
