--- a/src/components/radio-button-input/radio-button-input.html
+++ b/src/components/radio-button-input/radio-button-input.html
@@ -26,14 +26,16 @@
   <ion-col padding-top padding-bottom>
     <div>
       <label class="radio inline" *ngFor="let option of options">
-        <input type="radio" value="{{ option.code }}" name="{{ fieldId }}" (change)="saveValue()" [(ngModel)]="dataModal[fieldId]">
+        <input [disabled]="lockingFieldStatus" type="radio" value="{{ option.code }}" name="{{ fieldId }}"
+          (change)="saveValue()" [(ngModel)]="dataModal[fieldId]">
         <span> {{ option.name }} </span>
       </label>
     </div>
   </ion-col>
   <ion-col col-auto>
     <div float-right>
-      <button color="danger" padding [disabled]="dataModal[fieldId] == ''" outline small ion-button (tap)="clearInput()">
+      <button color="danger" padding [disabled]="dataModal[fieldId] == ''" outline small ion-button
+        (tap)="clearInput()">
         <ion-icon name="trash" color="danger"></ion-icon>
       </button>
     </div>
