--- a/src/components/unit-interval-input/unit-interval-input.html
+++ b/src/components/unit-interval-input/unit-interval-input.html
@@ -24,15 +24,18 @@
 -->
 <ion-row no-padding>
   <ion-col no-padding>
-    <ion-range [(ngModel)]="rangeValue" min="0" max="{{ maxCount }} " [color]="(colorSettings$ |async).colorAttributes.secondary"
+    <ion-range [(ngModel)]="rangeValue" min="0" max="{{ maxCount }} "
+      [color]="(colorSettings$ |async).colorAttributes.secondary" [disabled]="lockingFieldStatus"
       (ionChange)="updateValue()"></ion-range>
   </ion-col>
   <ion-col col-auto align-items-end>
     <div class="top-padding">
-      <button color="font-color" outline ion-button [disabled]="rangeValue === ''" (tap)="clearValue()">
+      <button color="font-color" outline ion-button [disabled]="rangeValue === '' || lockingFieldStatus"
+        (tap)="clearValue()">
         {{ displayValue }}
       </button>
-      <button color="danger" padding outline ion-button [disabled]="rangeValue === ''" (tap)="clearValue()">
+      <button color="danger" padding outline ion-button [disabled]="rangeValue === '' || lockingFieldStatus"
+        (tap)="clearValue()">
         <ion-icon name="trash" color="danger"></ion-icon>
       </button>
     </div>
