--- a/src/pages/data-entry/data-entry-form/data-entry-form.scss
+++ b/src/pages/data-entry/data-entry-form/data-entry-form.scss
@@ -16,6 +16,10 @@ page-data-entry-form {
   }
 
   .lock-form {
-    background-color: #FFEA00
+    // background-color: #FFE9A5;
+    // color: #958444;
+    color: #856404;
+    background-color: #fff3cd;
+    border-color: #ffeeba;
   }
 }
