--- a/src/pages/sync/components/tracker-data-downloader/tracker-data-downloader.scss
+++ b/src/pages/sync/components/tracker-data-downloader/tracker-data-downloader.scss
@@ -1,3 +1,7 @@
 tracker-data-downloader {
-
+  .download-data-status {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+  }
 }
