fix: Adding option value name on data set report
Adding option value name of data set report in case of aggregate values same as option code of one
of option

--- a/src/pages/reports/components/data-set-report-row/data-set-report-row.html
+++ b/src/pages/reports/components/data-set-report-row/data-set-report-row.html
@@ -6,7 +6,8 @@
       </th>
     </tr>
     <tr *ngIf="dataElement.categoryCombo.name !='default'">
-      <th *ngFor="let categoryOptionCombo of dataElement.categoryCombo.categoryOptionCombos;trackBy: trackByFn" class="inputLabel">
+      <th *ngFor="let categoryOptionCombo of dataElement.categoryCombo.categoryOptionCombos;trackBy: trackByFn"
+        class="inputLabel">
         {{ categoryOptionCombo.name }}
       </th>
     </tr>
@@ -14,7 +15,11 @@
   <tbody>
     <tr>
       <th *ngFor="let categoryOptionCombo of dataElement.categoryCombo.categoryOptionCombos;trackBy: trackByFn">
-        {{ dataSetReportAggregateValues[dataElement.id + "-" + categoryOptionCombo.id] }}
+        {{ dataSetReportAggregateValues[dataElement.id + "-" + categoryOptionCombo.id].value }}
+        <b><i>
+            {{ dataSetReportAggregateValues[dataElement.id + "-" + categoryOptionCombo.id].optionCodeName }}
+          </i>
+        </b>
       </th>
     </tr>
   </tbody>
