feat(Custom forms): Aggregate indicators
Adding support of calculation of aggregate indicators on custom forms

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -3,6 +3,12 @@
   min-width: 12rem;
 }
 
+.entryfield-total {
+  text-align: center;
+  min-width: 12rem;
+
+}
+
 
 select {
   text-align: center;
