--- a/src/pages/event-capture/components/program-stage-event-based/program-stage-event-based.html
+++ b/src/pages/event-capture/components/program-stage-event-based/program-stage-event-based.html
@@ -33,7 +33,8 @@
       <span class="required">*</span>
     </div>
     <div class="input-field-container">
-      <data-time-input [(inputValue)]="eventDate" (dateTimeUpdateAction)="updateEventDate($event)" [mode]="'date'"></data-time-input>
+      <data-time-input [(inputValue)]="eventDate" (dateTimeUpdateAction)="updateEventDate($event)" [mode]="'date'">
+      </data-time-input>
     </div>
 
     <div *ngIf="!(eventDate && eventDate != '')">
@@ -42,20 +43,27 @@
     <div *ngIf="eventDate && eventDate != ''">
       <div *ngIf="programStage.captureCoordinates" class="item-card">
         {{ translationMapper['Coordinate']}}
-        <event-coordinate-selector (onChangeEventCoordonate)="updateEventCoordonate($event)" [(coordinate)]="currentEvent.coordinate"></event-coordinate-selector>
+        <event-coordinate-selector (onChangeEventCoordonate)="updateEventCoordonate($event)"
+          [(coordinate)]="currentEvent.coordinate"></event-coordinate-selector>
       </div>
-      <div *ngIf="(programStage && programStage.id && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
+      <div
+        *ngIf="(programStage && programStage.id && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
         <div *ngIf="!hiddenProgramStages[programStage.id]">
-          <div *ngIf="formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' ">
-            <custom-data-entry-form [entryFormType]="entryFormType" [dataEntryFormDesign]="programStage.dataEntryForm"
-              [data]="dataObject" [programIndicators]="programIndicators" [dataUpdateStatus]="dataUpdateStatus"
+          <div
+            *ngIf="formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' ">
+            <custom-data-entry-form [customFormProgramRules]="customFormProgramRules" [entryFormType]="entryFormType"
+              [dataEntryFormDesign]="programStage.dataEntryForm" [data]="dataObject"
+              [programIndicators]="programIndicators" [dataUpdateStatus]="dataUpdateStatus"
               [programStageDataElements]="programStage.programStageDataElements" [programStageId]="programStage.id"
               (onCustomFormInputChange)="updateData($event)"></custom-data-entry-form>
           </div>
-          <div *ngIf="!(formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' )">
-            <default-event-entry-form [(errorOrWarningMessage)]="errorOrWarningMessage" [(hiddenSections)]="hiddenSections"
-              [(hiddenFields)]="hiddenFields" [programStage]="programStage" [currentUser]="currentUser" [(dataObject)]="dataObject"
-              [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" (onChange)="updateData($event)"></default-event-entry-form>
+          <div
+            *ngIf="!(formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' )">
+            <default-event-entry-form [(errorOrWarningMessage)]="errorOrWarningMessage"
+              [(hiddenSections)]="hiddenSections" [(hiddenFields)]="hiddenFields" [programStage]="programStage"
+              [currentUser]="currentUser" [(dataObject)]="dataObject"
+              [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" (onChange)="updateData($event)">
+            </default-event-entry-form>
           </div>
           <ion-row no-padding>
             <ion-col>
@@ -68,7 +76,8 @@
                 <div class="item-card" color="font-color" ion-button clear text-justify (click)="AddNewEvent()">
                   <ion-icon name="add" color="icon-color"></ion-icon>&nbsp; {{ translationMapper['Add New']}}
                 </div>
-                <div class="item-card" color="danger" ion-button clear text-justify (click)="deleteEvent(currentEvent.id)">
+                <div class="item-card" color="danger" ion-button clear text-justify
+                  (click)="deleteEvent(currentEvent.id)">
                   <ion-icon name="trash"></ion-icon>&nbsp; {{ translationMapper['Delete']}}
                 </div>
               </div>
@@ -77,8 +86,10 @@
         </div>
       </div>
     </div>
-    <div *ngIf="!(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
-      <notification [message]="translationMapper['There are no data elements, please contact you help desk']"></notification>
+    <div
+      *ngIf="!(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
+      <notification [message]="translationMapper['There are no data elements, please contact you help desk']">
+      </notification>
     </div>
   </div>
 </div>
